Fix Polly language and localisation

--- a/Resources/Prototypes/Entities/Mobs/NPCs/pets.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/pets.yml
@@ -954,4 +954,12 @@
       gender: male
   - type: Loadout
     prototypes: [ MobPollyGear ]
-
+    # Erida-start
+  - type: LanguageSpeaker
+    currentLanguage: TauCetiBasic
+  - type: LanguageKnowledge
+    speaks:
+    - TauCetiBasic
+    understands:
+    - TauCetiBasic
+    # Erida-end
