--- a/Resources/Prototypes/Entities/Mobs/Player/observer.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/observer.yml
@@ -69,6 +69,9 @@
     radius: 6
     castShadows: false
     enabled: false
+  - type: MovementSpeedModifier # Erida
+    baseWalkSpeed : 22
+    baseSprintSpeed : 12
 
 # proto for player ghosts specifically
 - type: entity
