--- a/Resources/Prototypes/Entities/Structures/Doors/Airlocks/highsec.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Airlocks/highsec.yml
@@ -16,7 +16,6 @@
     - state: closed_unlit
       shader: unshaded
       map: ["enum.DoorVisualLayers.BaseUnlit"]
-      visible: false
     - state: welded
       map: ["enum.WeldableLayers.BaseWelded"]
     - state: bolted_unlit
@@ -70,6 +69,7 @@
     fuel: 10
     time: 10
   - type: Airlock
+    openUnlitVisible: true # Erida
   - type: NavMapDoor
   - type: DoorBolt
   - type: AccessReader
