Allow everyone to join as every job-assistants

--- a/Resources/Prototypes/Roles/Jobs/Engineering/technical_assistant.yml
+++ b/Resources/Prototypes/Roles/Jobs/Engineering/technical_assistant.yml
@@ -6,10 +6,12 @@
   requirements:
     - !type:OverallPlaytimeRequirement
       time: 3600 #1 hr
-    - !type:DepartmentTimeRequirement
-      department: Engineering
-      time: 18000 #5 hrs
-      inverted: true # stop playing intern if you're good at engineering!
+        # Erida-start
+    # - !type:DepartmentTimeRequirement
+    #   department: Engineering
+    #   time: 18000 #5 hrs
+    #   inverted: true # stop playing intern if you're good at engineering!
+        # Erida-end
   startingGear: TechnicalAssistantGear
   icon: "JobIconTechnicalAssistant"
   supervisors: job-supervisors-engineering
