--- a/Resources/Prototypes/Roles/Jobs/Science/research_assistant.yml
+++ b/Resources/Prototypes/Roles/Jobs/Science/research_assistant.yml
@@ -3,11 +3,13 @@
   name: job-name-research-assistant
   description: job-description-research-assistant
   playTimeTracker: JobResearchAssistant
-  requirements:
-    - !type:DepartmentTimeRequirement
-      department: Science
-      time: 18000 #5 hrs
-      inverted: true # stop playing intern if you're good at science!
+      # Erida-start
+  # requirements:
+  #   - !type:DepartmentTimeRequirement
+  #     department: Science
+  #     time: 18000 #5 hrs
+  #     inverted: true # stop playing intern if you're good at science!
+      # Erida-end
   startingGear: ResearchAssistantGear
   icon: "JobIconResearchAssistant"
   supervisors: job-supervisors-science
