--- a/Resources/Prototypes/Maps/fland.yml
+++ b/Resources/Prototypes/Maps/fland.yml
@@ -2,7 +2,7 @@
   id: Fland
   mapName: 'Fland Installation'
   mapPath: /Maps/fland.yml
-  minPlayers: 55 # Corvax
+  minPlayers: 70
   stations:
     Fland:
       stationProto: StandardNanotrasenStation
@@ -20,7 +20,6 @@
           availableJobs: # 81 jobs total w/o latejoins & interns, 101 jobs total w/ latejoins & interns
             #command (7)
             Captain: [ 1, 1 ]
-            IAA: [ 1, 1 ] # Corvax-IAA
             HeadOfPersonnel: [ 1, 1 ]
             HeadOfSecurity: [ 1, 1 ]
             ChiefMedicalOfficer: [ 1, 1 ]
@@ -50,11 +49,10 @@
             ResearchAssistant: [ 6, 6 ] #intern, not counted
             #security (14)
             Warden: [ 1, 1 ]
-            Brigmedic: [ 1, 1 ] # backmen-Brigmedic
             SecurityOfficer: [ 10, 10 ]
             Detective: [ 1, 1 ]
-            SecurityCadet: [ 6, 6 ]
-            Lawyer: [ 2, 2 ] # Corvax-IAA
+            SecurityCadet: [ 6, 6 ] #intern, not counted
+            Lawyer: [ 2, 2 ]
             #supply (9)
             SalvageSpecialist: [ 3, 3 ]
             CargoTechnician: [ 6, 6 ]
@@ -66,24 +64,3 @@
             #silicon (6)
             StationAi: [ 1, 1 ]
             Borg: [ 5, 5 ]
-        - type: StationGoal
-          goals:
-          - Singularity
-          - SolarPanels
-          - Artifacts
-          - Bank
-          - Zoo
-          - MiningOutpost
-          - Tesla
-          - SecurityTraining
-          - ShuttleMed
-          - ShuttleSec
-          - ShuttleRnd
-          - ShuttleSrv
-          - ShuttleEmergency
-          - Theatre
-          - CellAI
-          - Botany
-          - Bunker
-          - XenobiologyRepair
-          - VirusologyAmbusol
