--- a/Resources/Prototypes/Maps/packed.yml
+++ b/Resources/Prototypes/Maps/packed.yml
@@ -2,16 +2,14 @@
   id: Packed
   mapName: 'Packed'
   mapPath: /Maps/packed.yml
-  # Corvax-start
-  minPlayers: 0
-  maxPlayers: 40
-  # Corvax-end
+  minPlayers: 7
+  maxPlayers: 35
   stations:
     Packed:
       stationProto: StandardNanotrasenStation
       components:
         - type: StationNameSetup
-          mapNameTemplate: '{0} Пакет {1}' # Corvax
+          mapNameTemplate: '{0} Packed {1}'
           nameGenerator:
             !type:NanotrasenNameGenerator
             prefixCreator: 'VG'
@@ -21,7 +19,6 @@
           availableJobs: # 46 jobs total w/o latejoins & interns, 57 jobs total w/ latejoins & interns
             #command (7)
             Captain: [ 1, 1 ]
-            IAA: [ 1, 1 ] # Corvax-IAA
             HeadOfPersonnel: [ 1, 1 ]
             HeadOfSecurity: [ 1, 1 ]
             ChiefMedicalOfficer: [ 1, 1 ]
@@ -52,9 +49,8 @@
             Warden: [ 1, 1 ]
             SecurityOfficer: [ 3, 3 ]
             Detective: [ 1, 1 ]
-            SecurityCadet: [ 2, 2 ]
-            Lawyer: [ 1, 1 ] # Corvax-IAA
-            Brigmedic: [ 1, 1 ] # backmen-Brigmedic
+            SecurityCadet: [ 2, 2 ] #intern, not counted
+            Lawyer: [ 1, 1 ]
             #supply (4)
             SalvageSpecialist: [ 2, 2 ]
             CargoTechnician: [ 2, 2 ]
@@ -66,24 +62,3 @@
             #silicon (2)
             StationAi: [ 1, 1 ]
             Borg: [ 1, 1 ]
-        - type: StationGoal
-          goals:
-          - Singularity
-          - SolarPanels
-          - Artifacts
-          - Bank
-          - Zoo
-          - MiningOutpost
-          - Tesla
-          - SecurityTraining
-          - ShuttleMed
-          - ShuttleSec
-          - ShuttleRnd
-          - ShuttleSrv
-          - ShuttleEmergency
-          - Theatre
-          - CellAI
-          - Botany
-          - Bunker
-          - XenobiologyRepair
-          - VirusologyAmbusol
