--- a/Resources/Prototypes/_Erida/Maps/Pool/EridaStandart.yml
+++ b/Resources/Prototypes/_Erida/Maps/Pool/EridaStandart.yml
@@ -9,18 +9,18 @@
   - BackmenShoukou
   - BackmenRook
   - BackmenDelta
-  - Amber
-  - Bagel
-  - Convex
-  - Elkridge
-  - Exo
-  - Fland
-  - Loop
-  - Marathon
-  - Meta
-  - Oasis
-  - Omega
-  - Packed
-  - Plasma
+  - Amber_Erida
+  - Bagel_Erida
+  - Convex_Erida
+  - Elkridge_Erida
+  - Exo_Erida
+  - Fland_Erida
+  - Loop_Erida
+  - Marathon_Erida
+  - Meta_Erida
+  - Oasis_Erida
+  - Omega_Erida
+  - Packed_Erida
+  - Plasma_Erida
   - Train
   - CorvaxSilly
