--- a/Resources/Maps/Erida/plasma.yml
+++ b/Resources/Maps/Erida/plasma.yml
@@ -66402,14 +66402,14 @@ entities:
       rot: -1.5707963267948966 rad
       pos: -96.5,1.5
       parent: 2
-- proto: ComputerTabletopCrewMonitoring
+- proto: ComputerCrewMonitoring
   entities:
   - uid: 10386
     components:
     - type: Transform
       pos: -97.5,-49.5
       parent: 2
-- proto: ComputerTabletopCriminalRecords
+- proto: ComputerCriminalRecords
   entities:
   - uid: 10387
     components:
@@ -150129,20 +150129,10 @@ entities:
     - type: Transform
       pos: -96.5,-49.5
       parent: 2
-  - uid: 22462
-    components:
-    - type: Transform
-      pos: -97.5,-49.5
-      parent: 2
   - uid: 22463
     components:
     - type: Transform
       pos: -96.5,-51.5
-      parent: 2
-  - uid: 22464
-    components:
-    - type: Transform
-      pos: -96.5,-50.5
       parent: 2
 - proto: TableReinforced
   entities:
