--- a/Resources/Maps/Erida/silly.yml
+++ b/Resources/Maps/Erida/silly.yml
@@ -17150,7 +17150,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 9.5,4.5
       parent: 5532
-- proto: ComputerTabletopCrewMonitoring
+- proto: ComputerCrewMonitoring
   entities:
   - uid: 1916
     components:
@@ -37353,12 +37353,6 @@ entities:
     - type: Transform
       pos: -14.5,17.5
       parent: 2
-  - uid: 4441
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: -17.5,16.5
-      parent: 2
   - uid: 4442
     components:
     - type: Transform
@@ -37452,12 +37446,6 @@ entities:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 12.5,8.5
-      parent: 2
-  - uid: 4459
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: 13.5,13.5
       parent: 2
   - uid: 4460
     components:
