--- a/Resources/Prototypes/_Backmen/Entities/Objects/Weapons/Guns/Energy/hitscan.yml
+++ b/Resources/Prototypes/_Backmen/Entities/Objects/Weapons/Guns/Energy/hitscan.yml
@@ -23,11 +23,11 @@
   - type: Item
     size: SmallNormal
   - type: ProjectileBatteryAmmoProvider
-    proto: BulletEnergyGunLaserMk2
+    proto: X01Attack
     fireCost: 100
   - type: BatteryWeaponFireModes
     fireModes:
-    - proto: BulletEnergyGunLaserMk2
+    - proto: X01Attack
       fireCost: 100
     - proto: BulletDisabler
       fireCost: 75
@@ -44,28 +44,35 @@
 
 - type: entity
   name: лазерная пуля
-  id: BulletEnergyGunLaserMk2
+  id: X01Attack
   parent: EmitterBolt
   categories: [ HideSpawnMenu ]
   components:
-  - type: Reflective
-    reflective:
-    - Energy
-  - type: FlyBySound
-    sound:
-      collection: EnergyMiss
-      params:
-        volume: 5
   - type: Sprite
-    sprite: Objects/Weapons/Guns/Projectiles/projectiles_tg.rsi
+    sprite: Backmen/Objects/Weapons/Guns/Energy/x01.rsi
     layers:
-    - state: omnilaser_greyscale
+    - state: redtrac
       shader: unshaded
-      color: red
   - type: Projectile
-    impactEffect: BulletImpactEffectRedDisabler
     damage:
       types:
-        Heat: 20 # Slightly more damage than the 17heat from the Captain's Hitscan lasgun
-    soundHit:
-      collection: MeatLaserImpact
+        Heat: 17
+
+- type: entity
+  id: BulletImpactEffectRedDisabler
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: TimedDespawn
+    lifetime: 0.2
+  - type: Sprite
+    drawdepth: Effects
+    layers:
+    - shader: unshaded
+      map: ["enum.EffectLayers.Unshaded"]
+      sprite: Objects/Weapons/Guns/Projectiles/projectiles_tg.rsi
+      state: impact_laser_greyscale
+      color: red
+  - type: EffectVisuals
+  - type: Tag
+    tags:
+    - HideContextMenu
