--- a/Resources/Prototypes/_Backmen/Entities/Clothing/OuterClothing/coat.yml
+++ b/Resources/Prototypes/_Backmen/Entities/Clothing/OuterClothing/coat.yml
@@ -11,13 +11,13 @@
   - type: Armor
     modifiers:
       coefficients:
-        Blunt: 0.7
-        Slash: 0.7
-        Piercing: 0.5
+        Blunt: 0.6
+        Slash: 0.6
+        Piercing: 0.6
         Heat: 0.7
         Caustic: 0.75
-  - type: StaminaResistance # do not add these to other equipment or mobs, we don't want to microbalance these everywhere
-    damageCoefficient: 0.8
+#  - type: StaminaResistance # do not add these to other equipment or mobs, we don't want to microbalance these everywhere
+#    damageCoefficient: 0.8 // убрано до баланса всего
   - type: ExplosionResistance
     damageCoefficient: 0.9
   - type: GroupExamine
