organs for felinids, fix shadowkins metabolism, localisation

--- a/Resources/Prototypes/_Backmen/Body/Prototypes/felinid.yml
+++ b/Resources/Prototypes/_Backmen/Body/Prototypes/felinid.yml
@@ -18,10 +18,10 @@
       - right leg
       - left leg
       organs:
-        heart: OrganHumanHeart
+        heart: OrganFelinidHeart
         lungs: OrganHumanLungs
-        stomach: OrganHumanStomach
-        liver: OrganHumanLiver
+        stomach: OrganFelinidStomach
+        liver: OrganFelinidLiver
         kidneys: OrganHumanKidneys
     right arm:
       part: RightArmHuman
