--- a/Resources/Prototypes/_Ataraxia/Body/Prototypes/anthropomorph.yml
+++ b/Resources/Prototypes/_Ataraxia/Body/Prototypes/anthropomorph.yml
@@ -18,7 +18,7 @@
       - right leg
       - left leg
       organs:
-        heart: OrganAnimalHeart
+        heart: OrganAnthroAnimalHeart
         lungs: OrganHumanLungs
         stomach: OrganAnthroAnimalStomach
         liver: OrganAnthroAnimalLiver
