--- a/Resources/Prototypes/_Backmen/Body/Organs/shadowkin.yml
+++ b/Resources/Prototypes/_Backmen/Body/Organs/shadowkin.yml
@@ -51,7 +51,7 @@
     state: heart
   - type: Metabolizer
     maxReagents: 2
-    metabolizerTypes: [Shadowkin]
+    metabolizerTypes: [Animal]
     groups:
     - id: Medicine
     - id: Poison
@@ -59,7 +59,7 @@
 
 - type: entity
   id: OrganShadowkinStomach
-  parent: OrganHumanStomach
+  parent: OrganAnimalStomach
   description: '"Yummy!", says the stomach, although you are unable to hear it.'
   components:
   - type: Sprite
@@ -91,7 +91,7 @@
     state: liver
   - type: Metabolizer
     maxReagents: 1
-    metabolizerTypes: [Shadowkin]
+    metabolizerTypes: [Animal]
     groups:
     - id: Alcohol
       rateModifier: 0.1
