--- a/Resources/Prototypes/_Corvax/Entities/Markers/Spawners/jobs.yml
+++ b/Resources/Prototypes/_Corvax/Entities/Markers/Spawners/jobs.yml
@@ -1,5 +1,17 @@
 - type: entity
-  id: SpawnPointPilot
+  id: SpawnPointBrigmedic # Corvax
+  parent: SpawnPointJobBase
+  name: brigmedic
+  components:
+  - type: SpawnPoint
+    job_id: Brigmedic
+  - type: Sprite
+    layers:
+      - state: green
+      - state: brigmedic
+
+- type: entity
+  id: SpawnPointPilot # Corvax
   parent: SpawnPointJobBase
   name: pilot
   components:
@@ -9,3 +21,15 @@
     layers:
     - state: green
     - state: seniorofficer
+
+- type: entity
+  id: SpawnPointIAA # Corvax
+  parent: SpawnPointJobBase
+  name: IAA
+  components:
+  - type: SpawnPoint
+    job_id: IAA
+  - type: Sprite
+    layers:
+      - state: green
+      - state: lawyer
