--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -1556,3 +1556,22 @@
       borderColor: "#6f6192"
     - type: Icon
       state: pda-lawyer
+
+- type: entity
+  parent: BasePDA
+  id: PilotPDA
+  name: pilot PDA
+  description: Нas protection from cosmic radiation.
+  components:
+    - type: Appearance
+      appearanceDataInit:
+        enum.PdaVisuals.PdaType:
+          !type:String
+          pda-seniorofficer
+    - type: Pda
+      id: PilotIDCard
+    - type: PdaBorderColor
+      borderColor: "#A32D26"
+      accentVColor: "#DFDFDF"
+    - type: Icon
+      state: pda-seniorofficer
