--- a/Resources/Prototypes/_Backmen/Roles/play_time_trackers.yml
+++ b/Resources/Prototypes/_Backmen/Roles/play_time_trackers.yml
@@ -6,3 +6,9 @@
 
 - type: playTimeTracker
   id: JobRoboticist
+
+- type: playTimeTracker
+  id: JobIAA
+
+- type: playTimeTracker
+  id: JobSecurityPilot
