--- a/Resources/Prototypes/_Erida/Maps/Pool/EridaStandart.yml
+++ b/Resources/Prototypes/_Erida/Maps/Pool/EridaStandart.yml
@@ -13,7 +13,7 @@
   - Bagel_Erida
   - Convex_Erida
   - Elkridge_Erida
-  - Exo_Erida
+  - Exo
   - Fland_Erida
   - Loop_Erida
   - Marathon_Erida
