--- a/Resources/Prototypes/_Erida/Maps/bagel.yml
+++ b/Resources/Prototypes/_Erida/Maps/bagel.yml
@@ -19,6 +19,7 @@
             #command (7)
             Captain: [ 1, 1 ]
             IAA: [ 1, 1 ] # Corvax-IAA
+            CentralCommandBlueShieldOfficer: [ 1, 1 ] #erida
             #service
             HeadOfPersonnel: [ 1, 1 ]
             HeadOfSecurity: [ 1, 1 ]
