--- a/Resources/Prototypes/_Erida/Maps/elkridge.yml
+++ b/Resources/Prototypes/_Erida/Maps/elkridge.yml
@@ -28,6 +28,7 @@
             ChiefEngineer: [ 1, 1 ]
             ResearchDirector: [ 1, 1 ]
             Quartermaster: [ 1, 1 ]
+            CentralCommandBlueShieldOfficer: [ 1, 1 ] #erida
             #service (9 - 11)
             Bartender: [ 1, 1 ]
             Botanist: [ 1, 2 ]
