--- a/Resources/Prototypes/Maps/exo.yml
+++ b/Resources/Prototypes/Maps/exo.yml
@@ -51,6 +51,8 @@
             Detective: [ 1, 1 ]
             SecurityCadet: [ 4, 4 ]
             Lawyer: [ 2, 2 ]
+            Brigmedic: [ 1, 1 ]
+            CentralCommandBlueShieldOfficer: [ 1, 1 ]
             #supply
             Quartermaster: [ 1, 1 ]
             SalvageSpecialist: [ 3, 3 ]
