--- a/Resources/Prototypes/_Erida/Maps/backmen_box.yml
+++ b/Resources/Prototypes/_Erida/Maps/backmen_box.yml
@@ -51,7 +51,7 @@
             SecurityOfficer: [ 5, 7 ]
             Detective: [ 1, 1 ]
             SecurityCadet: [ 2, 4 ]
-            Pilot: [ 1, 1 ] # backmen-Pilot
+            SecurityPilot: [ 1, 1 ]
             Brigmedic: [ 1, 1 ] # backmen-Brigmedic
             #supply
             Quartermaster: [ 1, 1 ]
