--- a/Resources/Prototypes/_Erida/Maps/backmen_hive.yml
+++ b/Resources/Prototypes/_Erida/Maps/backmen_hive.yml
@@ -21,6 +21,7 @@
             Librarian: [ 1, 1 ]
           #command
             Captain: [ 1, 1 ]
+            CentralCommandBlueShieldOfficer: [ 1, 1 ] #erida
           #engineering
             AtmosphericTechnician: [ 1, 2 ]
             ChiefEngineer: [ 1, 1 ]
