--- a/Resources/Prototypes/_Erida/Maps/backmen_rook.yml
+++ b/Resources/Prototypes/_Erida/Maps/backmen_rook.yml
@@ -48,6 +48,7 @@
             Warden: [ 1, 1 ]
             SecurityCadet: [ 1, 2 ]
             Brigmedic: [ 1, 1 ]
+            CentralCommandBlueShieldOfficer: [ 1, 1 ] #erida
           #Science
             ResearchDirector: [ 1, 1 ]
             Scientist: [ 2, 3 ]
