--- a/Resources/Prototypes/_Erida/Maps/backmen_tortuga.yml
+++ b/Resources/Prototypes/_Erida/Maps/backmen_tortuga.yml
@@ -21,6 +21,7 @@
             Librarian: [ 1, 1 ]
           #command
             Captain: [ 1, 1 ]
+            CentralCommandBlueShieldOfficer: [ 1, 1 ] #erida
           #engineering
             AtmosphericTechnician: [ 2, 3 ]
             ChiefEngineer: [ 1, 1 ]
