--- a/Resources/Prototypes/_Erida/Maps/exo.yml
+++ b/Resources/Prototypes/_Erida/Maps/exo.yml
@@ -53,7 +53,7 @@
             SecurityCadet: [ 4, 4 ]
             Lawyer: [ 2, 2 ]
             Brigmedic: [ 1, 1 ]
-            CentralCommandBlueShield: [1, 1]
+            CentralCommandBlueShieldOfficer: [ 1, 1 ] #erida
             #supply
             Quartermaster: [ 1, 1 ]
             SalvageSpecialist: [ 3, 3 ]
