--- a/Resources/Prototypes/_Erida/Maps/fland.yml
+++ b/Resources/Prototypes/_Erida/Maps/fland.yml
@@ -27,6 +27,7 @@
             ChiefEngineer: [ 1, 1 ]
             ResearchDirector: [ 1, 1 ]
             Quartermaster: [ 1, 1 ]
+            CentralCommandBlueShieldOfficer: [ 1, 1 ] #erida
             #service (17)
             Bartender: [ 2, 2 ]
             Botanist: [ 3, 3 ]
