--- a/Resources/Prototypes/_Erida/Maps/plasma.yml
+++ b/Resources/Prototypes/_Erida/Maps/plasma.yml
@@ -28,6 +28,7 @@
             ResearchDirector: [ 1, 1 ]
             HeadOfSecurity: [ 1, 1 ]
             Quartermaster: [ 1, 1 ]
+            CentralCommandBlueShieldOfficer: [ 1, 1 ] #erida
             #service (15 - 17)
             Bartender: [ 2, 2 ]
             Botanist: [ 2, 3 ]
