--- a/Resources/Prototypes/_Erida/Maps/silly.yml
+++ b/Resources/Prototypes/_Erida/Maps/silly.yml
@@ -51,6 +51,7 @@
             SecurityCadet: [ 2, 2 ]
             Detective: [ 1, 1 ]
             Brigmedic: [ 1, 1 ]
+            CentralCommandBlueShieldOfficer: [ 1, 1 ] #erida
             # service
             HeadOfPersonnel: [ 1, 1 ]
             Bartender: [ 1, 1 ]
