--- a/Resources/Prototypes/_Backmen/Entities/Objects/Misc/identification_cards.yml
+++ b/Resources/Prototypes/_Backmen/Entities/Objects/Misc/identification_cards.yml
@@ -13,4 +13,4 @@
         - sprite: Backmen/Objects/Misc/id_cards.rsi
           state: idblueshield
     - type: PresetIdCard
-      job: BlueShield
+      job: CentralCommandBlueShieldOfficer
