--- a/Resources/Prototypes/_Backmen/Roles/Jobs/CentCom/blueshield.yml
+++ b/Resources/Prototypes/_Backmen/Roles/Jobs/CentCom/blueshield.yml
@@ -53,7 +53,7 @@
 
 - type: chameleonOutfit
   id: BlueShieldChameleonOutfit
-  job: BlueShield
+  job: CentralCommandBlueShieldOfficer
   hasMindShield: true
   equipment:
     head: ClothingHeadHatLightBeretBlueShield
