--- a/Resources/Prototypes/_Backmen/Entities/Clothing/Head/hardsuit_helmets.yml
+++ b/Resources/Prototypes/_Backmen/Entities/Clothing/Head/hardsuit_helmets.yml
@@ -19,3 +19,19 @@
     sprite: Backmen/Clothing/Head/Hardsuits/bluehardhelmet.rsi
   - type: Clothing
     sprite: Backmen/Clothing/Head/Hardsuits/bluehardhelmet.rsi
+
+- type: entity
+  parent: ClothingHeadHelmetHardsuitSecurity
+  id: ClothingHeadHelmetHardsuitSecurityPilot
+  name: security pilot hardsuit helmet
+  description: Armored hardsuit helmet for security needs.
+  components:
+  - type: Sprite
+    sprite: Backmen/Clothing/Head/Hardsuits/sec-pilot-hardsuit.rsi
+  - type: Clothing
+    sprite: Backmen/Clothing/Head/Hardsuits/sec-pilot-hardsuit.rsi
+  - type: PointLight
+    color: blue
+    radius: 7
+    energy: 3
+
