--- a/Resources/Maps/Shuttles/emergency_box.yml
+++ b/Resources/Maps/Shuttles/emergency_box.yml
@@ -3562,7 +3562,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: 9.5,12.5
       parent: 1
-- proto: ShotGunCabinetFilledBackmen
+- proto: ShotGunCabinetFilled
   entities:
   - uid: 489
     components:
