--- a/Resources/Maps/Shuttles/emergency_lox.yml
+++ b/Resources/Maps/Shuttles/emergency_lox.yml
@@ -3615,7 +3615,7 @@ entities:
     - type: Transform
       pos: -2.5,12.5
       parent: 1
-- proto: ShotGunCabinetFilledBackmen
+- proto: ShotGunCabinetFilled
   entities:
   - uid: 480
     components:
