--- a/Resources/Maps/Shuttles/emergency_delta.yml
+++ b/Resources/Maps/Shuttles/emergency_delta.yml
@@ -3600,7 +3600,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -4.5,3.5
       parent: 1
-- proto: ShotGunCabinetFilledBackmen
+- proto: ShotGunCabinetFilled
   entities:
   - uid: 576
     components:
