--- a/Resources/Prototypes/Entities/Structures/Machines/holopad.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/holopad.yml
@@ -940,3 +940,11 @@
   components:
   - type: Label
     currentLabel: holopad-service-clown-mime
+
+- type: entity
+  parent: HolopadCentCommBase
+  id: HolopadCentCommEvac
+  suffix: Centcomm, Evac room
+  components:
+  - type: Label
+    currentLabel: holopad-centomm-evac
