--- a/Resources/Prototypes/Entities/Structures/Furniture/Tables/operating_table.yml
+++ b/Resources/Prototypes/Entities/Structures/Furniture/Tables/operating_table.yml
@@ -11,3 +11,14 @@
   - type: Icon
     sprite: Structures/Furniture/Tables/optable.rsi
     state: operating_table
+  - type: ItemSlots # Backmen
+    slots:
+      gas_tank_slot:
+        name: comp-gas-canister-slot-name-gas-tank
+        priority: 1
+        whitelist:
+          tags:
+          - GasTank
+  - type: ContainerContainer # Backmen
+    containers:
+      gas_tank_slot: !type:ContainerSlot {}
