--- a/Resources/Prototypes/_Backmen/Loadouts/Jobs/CentCom/blueshield.yml
+++ b/Resources/Prototypes/_Backmen/Loadouts/Jobs/CentCom/blueshield.yml
@@ -4,7 +4,7 @@
   - !type:JobRequirementLoadoutEffect
     requirement:
       !type:RoleTimeRequirement
-      role: JobCentralCommandBlueShieldOfficer
+      role: JobBlueShieldOfficer
       time: 288000 #80 hrs
 
 #suit
