--- a/Resources/Prototypes/_Backmen/Markers/Spawners/jobs.yml
+++ b/Resources/Prototypes/_Backmen/Markers/Spawners/jobs.yml
@@ -4,7 +4,7 @@
   name: BlueShield
   components:
   - type: SpawnPoint
-    job_id: CentralCommandBlueShieldOfficer
+    job_id: BlueShieldOfficer
   - type: Sprite
     sprite: Backmen/Markers/jobs.rsi
     layers:
