--- a/Resources/Prototypes/_Backmen/Roles/Jobs/CentCom/blueshield.yml
+++ b/Resources/Prototypes/_Backmen/Roles/Jobs/CentCom/blueshield.yml
@@ -1,8 +1,8 @@
 - type: job
-  id: CentralCommandBlueShieldOfficer
+  id: BlueShieldOfficer
   name: job-name-blueshield
   description: job-description-blueshield
-  playTimeTracker: JobCentralCommandBlueShieldOfficer
+  playTimeTracker: JobBlueShieldOfficer
   canBeAntag: false
   requireAdminNotify: true
   joinNotifyCrew: true
@@ -53,7 +53,7 @@
 
 - type: chameleonOutfit
   id: BlueShieldChameleonOutfit
-  job: CentralCommandBlueShieldOfficer
+  job: BlueShieldOfficer
   hasMindShield: true
   equipment:
     head: ClothingHeadHatLightBeretBlueShield
