--- a/Resources/Prototypes/_Backmen/Roles/play_time_trackers.yml
+++ b/Resources/Prototypes/_Backmen/Roles/play_time_trackers.yml
@@ -1,5 +1,5 @@
 - type: playTimeTracker
-  id: JobCentralCommandBlueShieldOfficer
+  id: JobBlueShieldOfficer
 
 - type: playTimeTracker
   id: JobBrigmedic
