--- a/Resources/Prototypes/_Erida/Maps/meta.yml
+++ b/Resources/Prototypes/_Erida/Maps/meta.yml
@@ -24,7 +24,7 @@
             ChiefEngineer: [ 1, 1 ]
             ResearchDirector: [ 1, 1 ]
             Quartermaster: [ 1, 1 ]
-            CentralCommandBlueShieldOfficer: [ 1, 1 ] #erida
+            BlueShieldOfficer: [ 1, 1 ] #erida
             #service (14 - 16)
             Bartender: [ 2, 2 ]
             Botanist: [ 2, 3 ]
