--- a/Resources/Prototypes/_Backmen/Loadouts/role_loadout.yml
+++ b/Resources/Prototypes/_Backmen/Loadouts/role_loadout.yml
@@ -1,5 +1,5 @@
 - type: roleLoadout
-  id: JobCentralCommandBlueShieldOfficer
+  id: JobBlueShieldOfficer
   groups:
   - Werx-BlueShieldOfficer #backmen
   - Niz-BlueShieldOfficer #backmen
