--- a/Resources/Prototypes/_Erida/Maps/backmen_aspid.yml
+++ b/Resources/Prototypes/_Erida/Maps/backmen_aspid.yml
@@ -60,7 +60,7 @@
             Mime: [ 1, 1 ]
             Musician: [ 1, 1 ]
             #backmen
-            CentralCommandBlueShieldOfficer: [1, 1]
+            BlueShieldOfficer: [1, 1]
             StationAi: [ 1, 1 ]
         - type: StationGoal
           goals:
