--- a/Resources/Prototypes/_Erida/Maps/backmen_box.yml
+++ b/Resources/Prototypes/_Erida/Maps/backmen_box.yml
@@ -63,7 +63,7 @@
             Musician: [ 1, 1 ]
             Boxer: [ 2, 2 ]
             #centcomm
-            CentralCommandBlueShieldOfficer: [ 1, 1 ]
+            BlueShieldOfficer: [ 1, 1 ]
             #silicon
             StationAi: [ 1, 1 ]
             Borg: [ 3, 3 ]
