--- a/Resources/Prototypes/_Erida/Maps/backmen_delta.yml
+++ b/Resources/Prototypes/_Erida/Maps/backmen_delta.yml
@@ -46,7 +46,7 @@
             ChiefMedicalOfficer: [ 1, 1 ]
             ResearchDirector: [ 1, 1 ]
             Quartermaster: [ 1, 1 ]
-            CentralCommandBlueShieldOfficer: [1, 1]
+            BlueShieldOfficer: [1, 1]
             # medical
             Paramedic: [ 1, 1 ]
             MedicalDoctor: [ 5, 5 ]
