--- a/Resources/Prototypes/_Erida/Maps/backmen_shoukou.yml
+++ b/Resources/Prototypes/_Erida/Maps/backmen_shoukou.yml
@@ -49,7 +49,7 @@
             Warden: [ 1, 1 ]
             SecurityCadet: [ 1, 3 ]
             Brigmedic: [ 1, 1 ]
-            CentralCommandBlueShieldOfficer: [1, 1]
+            BlueShieldOfficer: [1, 1]
           #Science
             ResearchDirector: [ 1, 1 ]
             Scientist: [ 2, 3 ]
