--- a/Resources/Prototypes/_Erida/Maps/loop.yml
+++ b/Resources/Prototypes/_Erida/Maps/loop.yml
@@ -25,7 +25,7 @@
             ChiefEngineer: [ 1, 1 ]
             ResearchDirector: [ 1, 1 ]
             Quartermaster: [ 1, 1 ]
-            CentralCommandBlueShieldOfficer: [ 1, 1 ] #erida
+            BlueShieldOfficer: [ 1, 1 ] #erida
             #service (14)
             Bartender: [ 2, 2 ]
             Botanist: [ 2, 2 ]
