--- a/Resources/Prototypes/_Erida/Maps/Pool/EridaStandart.yml
+++ b/Resources/Prototypes/_Erida/Maps/Pool/EridaStandart.yml
@@ -24,3 +24,11 @@
   - Plasma_Erida
   - Train
   - CorvaxSilly
+
+
+- type: gameMapPool # Delete this after remapping other maps
+  id: EridaTempMapPool
+  maps:
+  - BackmenBox
+  - BackmenDelta
+  - BackmenShoukou
