--- a/Resources/Prototypes/_Erida/Maps/backmen_box.yml
+++ b/Resources/Prototypes/_Erida/Maps/backmen_box.yml
@@ -2,7 +2,7 @@
   id: BackmenBox
   mapName: 'Federation Box'
   mapPath: /Maps/Erida/box.yml
-  minPlayers: 30 # Corvax
+  minPlayers: 8 # Erida
   stations:
     Boxstation:
       stationProto: StandardNanotrasenStation
